fixed gallery tag type

--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -13,9 +13,7 @@
   <p><a href="./index.html" class="back-link">Go back</a></p>
 
   <main>
-    <div class="gallery"></div>
-    <!-- <ul class="gallery"></ul> -->
-
+    <ul class="gallery"></ul>
   </main>
 
   <script type="module" src="./js/1-gallery.js"></script>
